--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -11,11 +11,37 @@
         android:id="@+id/youtube_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_video_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10sp"
+        android:paddingLeft="10sp"
+        android:paddingRight="10sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="18sp"/>
     <TextView
         android:id="@+id/tv_view_count"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginTop="200sp"
-        android:layout_gravity="center"/>
+        android:paddingLeft="10sp"
+        android:paddingRight="10sp"
+        android:paddingTop="2sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="14sp"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:paddingTop="10sp"
+        android:id="@+id/rv_related_results"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <ProgressBar
+        android:id="@+id/pb_related_loading"
+        android:layout_width="42sp"
+        android:layout_height="42sp"
+        android:layout_gravity="center"
+        android:visibility="invisible"/>
 </LinearLayout>
